--- a/RPG/styles.css
+++ b/RPG/styles.css
@@ -19,3 +19,21 @@ body {
     color: #0a0a23;
     padding: 5px;
 }
+#monsterStats {
+    display: none;
+    border: 1px solid #0a0a23;
+    color: #ffffff;
+    padding: 5px;
+    background-color: #c70d0d;
+
+}
+.stat {
+    padding-right: 10px;
+}
+button {
+    cursor: pointer;
+    background-color: #feac32;
+    color: #0a0a23;
+    background-image: linear-gradient(#fecc4c, #ffac33);
+    border: 3px solid #feac32;
+}
